erDiagram
    USERS ||--o{ FORECASTS : requests
    USERS {
        uuid id PK
        string email
        string hashed_password
        boolean is_active
    }
    
    STOCKS ||--o{ PRICE_HISTORY : has
    STOCKS ||--o{ FORECASTS : tracks
    STOCKS {
        string symbol PK
        string name
        string sector
    }
    
    FORECASTS {
        uuid id PK
        string task_id "Celery Job ID"
        string symbol FK
        string prediction_token "e.g., P_SURGE_V_HIGH"
        float confidence
        json reasoning "Synthesized Narrative"
        string divergence_type "e.g., OPPORTUNITY_ALERT"
        string shadow_baseline "LSTM Control Prediction"
        datetime created_at
    }
    
    PRICE_HISTORY {
        datetime date
        string symbol FK
        float open
        float close
        float volume
        string neuro_symbolic_token "e.g., P_8_V_9"
    }